--- a/.eslintrc
+++ b/.eslintrc
@@ -25,11 +25,20 @@
         "sourceType": "module",
         "project": "./tsconfig.json"
     },
+    "overrides": [
+        {
+            "files": ["**/*.tsx"],
+            "rules": {
+                "react/prop-types": "off"
+            }
+        }
+    ],
     "rules": {
         "linebreak-style": "off",
         "@typescript-eslint/camelcase": "off",
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/no-unused-vars": ["warn"],
+        "@typescript-eslint/no-unused-expressions": "off",
         "react/jsx-curly-brace-presence": [
             "error",
             {
@@ -37,6 +46,7 @@
                 "children": "ignore"
             }
         ],
+        "react/prop-types": 0,
         "prettier/prettier": [
             "error",
             {
