--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "private": true,
     "dependencies": {
         "@ant-design/icons": "^4.6.2",
+        "@fortawesome/free-solid-svg-icons": "^5.15.3",
+        "@fortawesome/react-fontawesome": "^0.1.14",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
@@ -13,6 +15,8 @@
         "@types/react-dom": "^17.0.0",
         "antd": "^4.16.9",
         "react": "^17.0.2",
+        "react-beautiful-dnd": "^13.1.0",
+        "react-custom-scrollbars": "^4.2.1",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
@@ -49,6 +53,7 @@
         "@types/react-router-dom": "^5.1.8",
         "@typescript-eslint/eslint-plugin": "^4.28.5",
         "@typescript-eslint/parser": "^4.28.5",
+        "babel-plugin-root-import": "^6.6.0",
         "eslint": "^7.2.0",
         "eslint-config-airbnb": "18.2.1",
         "eslint-config-airbnb-typescript": "6.3.2",
