--- a/.eslintrc
+++ b/.eslintrc
@@ -39,6 +39,7 @@
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/no-unused-vars": ["warn"],
         "@typescript-eslint/no-unused-expressions": "off",
+        "import/prefer-default-export": "off",
         "react/jsx-curly-brace-presence": [
             "error",
             {
@@ -46,12 +47,13 @@
                 "children": "ignore"
             }
         ],
-        "react/prop-types": 0,
+        "react/prop-types": "warn",
         "prettier/prettier": [
             "error",
             {
                 "endOfLine": "auto"
             }
-        ]
+        ],
+        "no-unused-vars": "warn"
     }
 }
