--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@types/react": "^17.0.15",
         "@types/react-dom": "^17.0.0",
         "antd": "^4.16.9",
+        "axios": "^0.21.1",
         "nprogress": "^0.2.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
