--- a/.eslintrc
+++ b/.eslintrc
@@ -47,14 +47,13 @@
                 "children": "ignore"
             }
         ],
-        "react/jsx-props-no-spreading": [
-            "warn",
-            {
-                "html": "ignore",
-                "custom": "ignore",
-                "exceptions": []
-            }
-        ],
+        // "react/jsx-props-no-spreading": [
+        //     "error",
+        //     {
+        //         "html": "ignore",
+        //         "custom": "ignore"
+        //     }
+        // ],
         "react/prop-types": "warn",
         "prettier/prettier": [
             "error",
