--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,11 @@
         "isolatedModules": true,
         "noEmit": true,
         "noEmitOnError": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "baseUrl": "./src", // all paths are relative to the baseUrl
+        "paths": {
+            "@/*": ["*"] // resolve any `~/foo/bar` to `<baseUrl>/foo/bar`
+        }
     },
     "include": ["src"]
 }
