--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/react-dom": "^17.0.0",
         "antd": "^4.16.9",
         "axios": "^0.21.1",
+        "babe": "^0.0.1",
         "nprogress": "^0.2.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
@@ -58,6 +59,7 @@
         "@types/react-router-dom": "^5.1.8",
         "@typescript-eslint/eslint-plugin": "^4.28.5",
         "@typescript-eslint/parser": "^4.28.5",
+        "babel-plugin-module-resolver": "^4.1.0",
         "babel-plugin-root-import": "^6.6.0",
         "eslint": "^7.2.0",
         "eslint-config-airbnb": "18.2.1",
