--- a/.babelrc
+++ b/.babelrc
@@ -3,9 +3,9 @@
         [
             "module-resolver",
             {
-                "root": ["./"],
+                "root": ["./src"],
                 "alias": {
-                    "@app": "src"
+                    "@app": "./src"
                 }
             }
         ]
