--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "babe": "^0.0.1",
         "nprogress": "^0.2.0",
         "prop-types": "^15.7.2",
+        "query-string": "^7.0.1",
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
         "react-custom-scrollbars": "^4.2.1",
